<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Oakmont</string>
    <string name="activity_grades">Grades</string>
    <string name="aeries_username">Aeries Username</string>
    <string name="aeries_password">Aeries Password</string>
    <string name="activity_preferences">Settings</string>
	<string name="activity_grades_detail">Class Details</string>
	<string name="school_password">School Password</string>
	<string name="school_username">School Username</string>
	<string name="auto_login">Login to OHS WiFi</string>
	<string name="activity_grades_detail_detail">Details of assignment</string>
	<string name="refresh">Refresh</string>
	<string name="error">An error occurred</string>
	<string name="goto_login">Edit login info</string>
	<string name="activity_debug_preferences">Debug</string>
	<string name="version">Version</string>
	<string name="debug_clear_cache">Clear Cache</string>
	<string name="debug_clear_settings">Clear Settings</string>
	<string name="debug_clear_cache_info">This will clear the cache</string>
	<string name="debug_clear_settings_info">This will clear the cache</string>
    <string name="menu_image">Image next to the Menu item.</string>
	<string name="classes_overview">Classes Overview</string>
	<string name="swipe_instructions">Swipe from the right edge for navigation menu.</string>
	<string name="build_date">Build Date</string>
	<string name="news_title">Oakmont News</string>
	<string name="aeries_username_label">Aeries Email:</string>
	<string name="aeries_password_label">Aeries Password:</string>
	<string name="activity_map_view">Map</string>
	<string name="classes_widget_config_done">Done</string>
	<string name="classes_widget_configure_radio_show_some">Choose classes</string>
	<string name="classes_widget_configure_radio_show_all">Show all classes</string>
	<string name="activity_news">News</string>
	<string name="debug_false_data_info">Supplies false data to the grades checking system. This affects the cache.</string>
	<string name="debug_false_data">Use Fake Data</string>
	<string name="classOverviewImageDescription">Grade Icon</string>

	<string-array name="drawer_list_values">
		<item>Home</item>
		<item>News</item>
        <item>Grades</item>
		<item>Website</item>
		<item>School Map</item>
		<item>Calendar</item>
		<item>Settings</item>
    </string-array>
</resources>
